[metadata]
name = simple-ratelimiter
version = 1.0.0
author = Tuyen Phan
author_email = tuyenpt.hust@gmail.com
description = A simple Python Ratelimiter
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/tuyenpthust/simple-ratelimiter
project_urls =
    Bug Tracker = https://github.com/tuyenpthust/simple-ratelimiter/issues
    repository = https://github.com/tuyenpthust/simple-ratelimiter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src